Fix some alignement issues with amentiy table.

--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -44,7 +44,6 @@
 .newsletter-amenities2 {
   color:#989899;
   font-family:'Lato', sans-serif;
-  font-size:22px;
   font-weight:200;
   line-height:140%;
   font-style:italic;
@@ -85,6 +84,10 @@
   font-size: 26px;
   color: white;
   padding: 8px 52px;
+}
+
+.newsletter-highlights {
+  color: #666666;
 }
 .rent-label {
   background-color: #d46049;
@@ -155,6 +158,10 @@
 
 .padding-right {
   padding-left: 24px;
+}
+
+.padding-bottom {
+  padding-bottom: 18px;
 }
 
 .newsletter-address {
